fixed flipping animation from flickering

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  backface-visibility: visible;
+  backface-visibility: hidden;
 }
 
 .card .front {
